nullaway_error_5C89A684-DD88-48AC-BD6E-10534D662440.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context-support/src/main/java/org/springframework/cache/jcache/interceptor/DefaultJCacheOperationSource.java:206: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return getCacheManager();
		^
    (see http://t.uber.com/nullaway )
